--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                <div class="w-full self-end px-4 lg:w-1/2">
                   <div class="relative mt-10 lg:mt-0 lg:right-0">
-                     <img src="../src/img/photo-rs.png" alt="Hailee" class="max-w-full mx-auto" />
+                     <img src="src/img/photo-rs.png" alt="Hailee" class="max-w-full mx-auto" />
                      <span class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125 md:bottom-10">
                         <svg width="400" height="400" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
                            <path
