add about section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <meta charset="UTF-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
       <link rel="stylesheet" href="src/css/output.css" />
       <title>Portofolio | TailwindCSS</title>
    </head>
@@ -17,8 +18,8 @@
                      Hello Everyone ✌️, Im
                      <span class="font-bold block text-dark text-4xl mt-1 lg:text-5xl">Hailee Steinfeld</span>
                   </h1>
-                  <h2 class="font-medium text-slate-500 text-lg mb-5 lg:text-2xl">Actress & Singer</h2>
-                  <p class="font-medium text-slate-400 mb-10 leading-relaxed">
+                  <h2 class="font-medium text-secondary text-lg mb-5 lg:text-2xl">Actress & Singer</h2>
+                  <p class="font-medium text-secondary mb-10 leading-relaxed">
                      An actress and singer. Steinfeld starred in the films Ender's Game, Romeo & Juliet, Begin Again,
                      and
                      <span class="text-dark font-semibold">3 Days to Kill.</span>
@@ -48,5 +49,56 @@
          </div>
       </section>
       <!-- End Hero Section -->
+
+      <!-- About Section -->
+      <section id="about" class="pt-36 pb-32">
+         <div class="container">
+            <div class="flex flex-wrap">
+               <div class="w-full px-4 mb-10 lg:w-1/2">
+                  <h4 class="font-bold uppercase text-primary text-lg mb-3">About Me</h4>
+                  <h2 class="font-bold text-dark text-3xl mb-5 max-w-md lg:text-4xl">Some Interesting Fact Hailee</h2>
+                  <p class="font-medium text-base text-secondary max-w-xl lg:text-lg">
+                     Steinfeld had her breakthrough with the western film True Grit (2010), which earned her nominations
+                     for the Academy Award for Best Supporting Actress and the BAFTA Award for Best Actress in a Leading
+                     Role.
+                  </p>
+               </div>
+               
+               <div class="w-full px-4 lg:w-1/2">
+                  <h3 class="font-semibold text-dark text-2xl mb-4 lg:text-3xl lg:pt-10">Follow Me!</h3>
+                  <p class="font-medium text-base text-secondary mb-6 lg:text-lg">
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum eaque asperiores itaque error, totam
+                     expedita culpa necessitatibus vel?
+                  </p>
+                  <div class="flex items-center">
+                     <a
+                        href="https://www.instagram.com/haileesteinfeld/"
+                        class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                        <i class="bx bxl-instagram bx-sm"></i>
+                     </a>
+
+                     <a
+                        href="https://www.tiktok.com/@haileesteinfeld"
+                        class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                        <i class="bx bxl-tiktok bx-sm"></i>
+                     </a>
+
+                     <a
+                        href="https://www.youtube.com/channel/UCWfytcGFwPSMwvP5HYuXGqw"
+                        class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                        <i class="bx bxl-youtube bx-sm"></i>
+                     </a>
+                     
+                     <a
+                        href="https://twitter.com/HaileeSteinfeld"
+                        class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                        <i class="bx bxl-twitter bx-sm"></i>
+                     </a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- About Section End -->
    </body>
 </html>
