add client section

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                <div class="px-4">
                   <a href="#home" class="font-bold text-primary text-lg block py-6">HaileeSteinfeld</a>
                </div>
+
                <div class="flex items-center px-4">
                   <button id="hamburger" name="hamburger" type="button" class="block absolute right-4 lg:hidden">
                      <span class="hamburger-line transition duration-300 ease-in-out origin-top-left"></span>
                      <span class="hamburger-line transition duration-300 ease-in-out"></span>
                      <span class="hamburger-line transition duration-300 ease-in-out origin-bottom-left"></span>
                   </button>
-
                   <nav
                      id="nav-menu"
                      class="hidden absolute py-5 bg-white shadow-lg rounded-lg max-w-[250px] w-full right-4 top-full lg:block lg:static lg:bg-transparent lg:max-w-full lg:shadow-none lg:rounded-none">
@@ -146,6 +146,115 @@
          </div>
       </section>
       <!-- About Section End -->
+
+      <!-- Portofolio Section -->
+      <section id="portofolio" class="pt-36 pb-16 bg-slate-100">
+         <div class="container">
+            <div class="w-full px-4">
+               <div class="max-w-xl mx-auto text-center mb-16">
+                  <h4 class="font-semibold text-primary text-lg mb-2">Portofolio</h4>
+                  <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl md:text-5xl">Newest Project</h2>
+                  <p class="font-medium text-md text-secondary md:text-lg">
+                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias dolorum dolor porro eligendi,
+                     saepe dicta sunt!
+                  </p>
+               </div>
+            </div>
+
+            <div class="w-full px-4 flex flex-wrap justify-center">
+               <div class="mb-12 p-4 md:w-1/4">
+                  <div class="rounded-md shadow-md overflow-hidden hover:scale-95 transition-all duration-700">
+                     <img
+                        src="src/img/1.jpg"
+                        alt="Project"
+                        class="w-full hover:scale-125 transition-all duration-500" />
+                  </div>
+                  <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Hawkeye</h3>
+                  <p class="font-medium text-base text-secondary">
+                     Series based on the Marvel Comics superhero Hawkeye, centering on the adventures of Young Avenger,
+                     Kate Bishop, who took on the role after the original Avenger, Clint Barton.
+                  </p>
+               </div>
+
+               <div class="mb-12 p-4 md:w-1/4">
+                  <div class="rounded-md shadow-md overflow-hidden hover:scale-95 transition-all duration-700">
+                     <img
+                        src="src/img/2.jpg"
+                        alt="Project"
+                        class="w-full hover:scale-125 transition-all duration-500" />
+                  </div>
+                  <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Bumblebee</h3>
+                  <p class="font-medium text-base text-secondary">
+                     On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small California beach town.
+                     On the cusp of turning 18 and trying to find her place in the world, Charlie Watson discovers
+                     Bumblebee, battle-scarred and broken.
+                  </p>
+               </div>
+
+               <div class="mb-12 p-4 md:w-1/4">
+                  <div class="rounded-md shadow-md overflow-hidden hover:scale-95 transition-all duration-700">
+                     <img
+                        src="src/img/3.jpg"
+                        alt="Project"
+                        class="w-full hover:scale-125 transition-all duration-500" />
+                  </div>
+                  <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Spider-Man: Into the Spider-Verse</h3>
+                  <p class="font-medium text-base text-secondary">
+                     Teen Miles Morales becomes the Spider-Man of his universe, and must join with five spider-powered
+                     individuals from other dimensions to stop a threat for all realities.
+                  </p>
+               </div>
+
+               <div class="mb-12 p-4 md:w-1/4">
+                  <div class="rounded-md shadow-md overflow-hidden hover:scale-95 transition-all duration-700">
+                     <img
+                        src="src/img/4.jpg"
+                        alt="Project"
+                        class="w-full hover:scale-125 transition-all duration-500" />
+                  </div>
+                  <h3 class="font-semibold text-xl text-dark mt-5 mb-3">Arcane</h3>
+                  <p class="font-medium text-base text-secondary">
+                     Set in utopian Piltover and the oppressed underground of Zaun, the story follows the origins of two
+                     iconic League champions-and the power that will tear them apart.
+                  </p>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- Portofolio Section End -->
+
+      <!-- Client Section -->
+      <section id="client" class="pt-36 pb-32 bg-slate-800">
+         <div class="container">
+            <div class="w-full px-4">
+               <div class="max-w-xl mx-auto text-center mb-16">
+                  <h4 class="font-semibold text-primary text-lg mb-2">Clients</h4>
+                  <h2 class="font-bold text-white text-3xl mb-4 sm:text-4xl md:text-5xl">Are Working With</h2>
+                  <p class="font-medium text-md text-secondary md:text-lg">
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam eaque at iure!
+                  </p>
+               </div>
+            </div>
+
+            <div class="w-full px-4">
+               <div class="flex flex-wrap items-center justify-center">
+                  <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
+                     <img src="src/img/disney.svg" alt="" />
+                  </a>
+                  <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
+                     <img src="src/img/fox.svg" alt="" />
+                  </a>
+                  <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
+                     <img src="src/img/hbo.svg" alt="" />
+                  </a>
+                  <a href="#" class="max-w-[120px] mx-4 py-4 grayscale opacity-60 transition hover:grayscale-0 hover:opacity-100 duration-500 lg:mx-6 xl:mx-8">
+                     <img src="src/img/netflix.svg" alt="" />
+                  </a>
+               </div>
+            </div>
+         </div>
+      </section>
+      <!-- Client Section End -->
 
       <!-- Javascript -->
       <script src="src/js/script.js"></script>
