--- a/index.html
+++ b/index.html
@@ -284,42 +284,60 @@
                      <img src="src/img/blog1.jpg" alt="" class="w-full" />
                      <div class="py-8 px-6">
                         <h3>
-                           <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
+                           <a
+                              href="#"
+                              class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
                               9 Portrait of Hailee Steinfeld's 26th Birthday, Festive with Friends
                            </a>
                         </h3>
-                        <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!</p>
-                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md">Readmore...</a>
+                        <p class="font-medium text-secondary text-base mb-6">
+                           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!
+                        </p>
+                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md"
+                           >Readmore...</a
+                        >
                      </div>
                   </div>
                </div>
-               
+
                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                   <div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
                      <img src="src/img/blog2.jpg" alt="" class="w-full" />
                      <div class="py-8 px-6">
                         <h3>
-                           <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
+                           <a
+                              href="#"
+                              class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
                               Famous Since Young, These 7 Hollywood Artists Have Homeschooled
                            </a>
                         </h3>
-                        <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!</p>
-                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md">Readmore...</a>
+                        <p class="font-medium text-secondary text-base mb-6">
+                           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!
+                        </p>
+                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md"
+                           >Readmore...</a
+                        >
                      </div>
                   </div>
                </div>
-               
+
                <div class="w-full px-4 lg:w-1/2 xl:w-1/3">
                   <div class="bg-white rounded-xl overflow-hidden shadow-lg mb-10">
                      <img src="src/img/blog3.jpg" alt="" class="w-full" />
                      <div class="py-8 px-6">
                         <h3>
-                           <a href="#" class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
+                           <a
+                              href="#"
+                              class="block mb-3 font-semibold text-xl text-dark hover:text-primary transition-all truncate">
                               Star Hawkeye, 11 Childhood Portraits of Hailee Steinfeld, who are so excited
                            </a>
                         </h3>
-                        <p class="font-medium text-secondary text-base mb-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!</p>
-                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md">Readmore...</a>
+                        <p class="font-medium text-secondary text-base mb-6">
+                           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam, amet!
+                        </p>
+                        <a href="#" class="font-medium text-sm text-white bg-primary py-2 px-4 rounded-md"
+                           >Readmore...</a
+                        >
                      </div>
                   </div>
                </div>
@@ -327,6 +345,153 @@
          </div>
       </section>
       <!-- Blog Section End -->
+
+      <!-- Contact Section -->
+      <section id="contact" class="pt-36 pb-32">
+         <div class="container">
+            <div class="w-full px-4">
+               <div class="max-w-xl mx-auto text-center mb-16">
+                  <h4 class="font-semibold text-primary text-lg mb-2">Contact</h4>
+                  <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl md:text-5xl">Contact Us</h2>
+                  <p class="font-medium text-md text-secondary md:text-lg">
+                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae, tempore?
+                  </p>
+               </div>
+            </div>
+
+            <form>
+               <div class="w-full lg:w-2/3 lg:mx-auto">
+                  <div class="w-full mb-8 px-4">
+                     <label for="name" class="text-base text-primary font-bold">Nama</label>
+                     <input
+                        type="text"
+                        id="name"
+                        class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+                  </div>
+                  <div class="w-full mb-8 px-4">
+                     <label for="email" class="text-base text-primary font-bold">Email</label>
+                     <input
+                        type="email"
+                        id="email"
+                        class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary" />
+                  </div>
+                  <div class="w-full mb-8 px-4">
+                     <label for="message" class="text-base text-primary font-bold">Message</label>
+                     <textarea
+                        type="email"
+                        id="email"
+                        class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-32"></textarea>
+                  </div>
+                  <div class="w-full px-4">
+                     <button
+                        class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-80 hover:shadow-lg transition-all duration-500">
+                        Send
+                     </button>
+                  </div>
+               </div>
+            </form>
+         </div>
+      </section>
+      <!-- Contact Section End -->
+
+      <!-- Footer -->
+      <footer class="bg-dark pt-24 pb-12">
+         <div class="container">
+            <div class="flex flex-wrap">
+               <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
+                  <h2 class="font-bold text-4xl text-white mb-5">Steinfeld</h2>
+                  <h3 class="font-bold text-2xl mb-2">Contact Us</h3>
+                  <p>steinfeld@gmail.com</p>
+                  <p>578 Lightning Point Drive</p>
+                  <p>Tennessee</p>
+               </div>
+
+               <div class="w-full px-4 mb-12 md:w-1/3">
+                  <h3 class="font-semibold text-white text-xl mb-5">Category</h3>
+                  <ul class="text-slate-300">
+                     <li>
+                        <a href="#" class="inline-block text-base mb-3 hover:text-primary transition-all">Movie</a>
+                     </li>
+                     <li>
+                        <a href="#" class="inline-block text-base mb-3 hover:text-primary transition-all">Lifestyle</a>
+                     </li>
+                     <li>
+                        <a href="#" class="inline-block text-base mb-3 hover:text-primary transition-all">Series</a>
+                     </li>
+                  </ul>
+               </div>
+
+               <div class="w-full px-4 mb-12 md:w-1/3">
+                  <h3 class="font-semibold text-white text-xl mb-5">Links</h3>
+                  <ul class="text-slate-300">
+                     <li>
+                        <a href="#home" class="inline-block text-base mb-3 hover:text-primary transition-all">Home</a>
+                     </li>
+                     <li>
+                        <a href="#about" class="inline-block text-base mb-3 hover:text-primary transition-all"
+                           >About Me</a
+                        >
+                     </li>
+                     <li>
+                        <a href="#portofolio" class="inline-block text-base mb-3 hover:text-primary transition-all"
+                           >Portofolio</a
+                        >
+                     </li>
+                     <li>
+                        <a href="#client" class="inline-block text-base mb-3 hover:text-primary transition-all"
+                           >Client</a
+                        >
+                     </li>
+                     <li>
+                        <a href="#blog" class="inline-block text-base mb-3 hover:text-primary transition-all">Blog</a>
+                     </li>
+                     <li>
+                        <a href="#contact" class="inline-block text-base mb-3 hover:text-primary transition-all"
+                           >Contact</a
+                        >
+                     </li>
+                  </ul>
+               </div>
+            </div>
+
+            <div class="w-full pt-10 border-t border-slate-800">
+               <div class="flex items-center justify-center mb-5">
+                  <a
+                     href="https://www.instagram.com/haileesteinfeld/"
+                     class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                     <i class="bx bxl-instagram bx-sm"></i>
+                  </a>
+
+                  <a
+                     href="https://www.tiktok.com/@haileesteinfeld"
+                     class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                     <i class="bx bxl-tiktok bx-sm"></i>
+                  </a>
+
+                  <a
+                     href="https://www.youtube.com/channel/UCWfytcGFwPSMwvP5HYuXGqw"
+                     class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                     <i class="bx bxl-youtube bx-sm"></i>
+                  </a>
+
+                  <a
+                     href="https://twitter.com/HaileeSteinfeld"
+                     class="w-9 h-9 mr-3 rounded-full flex justify-center items-center border border-slate-300 text-slate-300 hover:bg-primary hover:text-white hover:border-none transition-all">
+                     <i class="bx bxl-twitter bx-sm"></i>
+                  </a>
+               </div>
+
+               <p class="font-medium text-sm text-slate-700 text-center">
+                  Made By
+                  <a href="https://www.instagram.com/puturangga21/" class="font-bold text-primary" target="_blank"
+                     >Putu Rangga</a
+                  >, Using TailwindCSS
+                  <span class="text-pink-500">❤️</span>
+               </p>
+            </div>
+         </div>
+      </footer>
+      <!-- Footer End -->
 
       <!-- Javascript -->
       <script src="src/js/script.js"></script>
